--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -27,10 +27,9 @@ import '../styles/navbar.scss';
         <div id="navbar-menu" class="hidden hs-collapse basis-full grow sm:block" aria-labelledby="navbar-menu-collapse">
             <ul class="site-navigation">
                 <li><a href="/">หน้าแรก</a></li>
-                <li><a href="/category/news">ข่าวหนัง</a></li>
-                <li><a href="/movie">ดูหนัง</a></li>
-                <li><a href="/category/trailer">ตัวอย่าง</a></li>
-                <li><a href="/category/netflix">NETFLIX</a></li>
+                <li><a href="/category/thai">ดูหนังไทย</a></li>
+                <li><a href="/category/inter">ดูหนังสากล</a></li>
+                <li><a href="https://onlygroub.com" target="_blank">ข่าวหนัง</a></li>
                 <li><a href="/contact">ติดต่อเรา</a></li>
             </ul>
         </div>
