--- a/src/pages/movie/[slug].astro
+++ b/src/pages/movie/[slug].astro
@@ -14,6 +14,10 @@ import { formatDateToThai } from '../../lib/formatDate';
 
 import Layout from '../../layouts/Layout.astro';
 
+import MoiveTemplate from '../../templates/Movie.astro';
+
+import RelatedPosts from '../../components/RelatedPosts.astro';
+
 export async function getStaticPaths() {
     let allPosts : any = [];
     let hasNextPage : boolean = true;
@@ -40,65 +44,52 @@ export async function getStaticPaths() {
 let { post, prev, next }: { post: Post, prev?: Post, next?: Post } = Astro.props;
 const relatedPosts = (post as any)?.relatedPosts.nodes;
 
-const isMovie : boolean = ['thai', 'inter'].includes(post.terms.nodes[0]?.slug);
-
-
-let postTitle : any;
 let structuredData : any;
-if (isMovie) {
-    
-    postTitle = `${post.title} : ดูหนัง เต็มเรื่อง เรื่องย่อ ตัวอย่าง`;
-    const randomRatingCount = Math.floor(Math.random() * (8 - 5 + 1) + 5);
-    structuredData  = `
-    {
-        "@context": "https://schema.org",
-        "@type": "Movie",
-        "name": "${post.title}",
-        "director": {
-            "@type": "Person",
-            "name": "${post.movie.director}"
-        },
-        "image": "${post.featuredImageMedium.node.sourceUrl}",
-        "dateCreated": "${post.date}+07:00",
-        "aggregateRating": {
-            "@type": "AggregateRating",
-            "bestRating": "10",
-            "ratingCount": "1",
-            "ratingValue": "${randomRatingCount}",
-            "reviewCount": "1"
-        },
-        "trailer": {
-            "@type": "VideoObject",
-            "name": "ตัวอย่างหนัง ${post.title}",
-            "description": "ตัวอย่างหนัง ${post.title} HD",
-            "thumbnailUrl": "${post.featuredImageMedium.node.sourceUrl}",
-            "uploadDate": "${post.date}+07:00",
-            "contentUrl": "https://youtu.be/${post.movie.youtubeId}",
-            "embedUrl": "https://www.youtube.com/embed/${post.movie.youtubeId}"
-        }
-    }`;
+const randomRatingCount = Math.floor(Math.random() * (8 - 5 + 1) + 5);
+structuredData  = `
+{
+    "@context": "https://schema.org",
+    "@type": "Movie",
+    "name": "${post.title}",
+    "director": {
+        "@type": "Person",
+        "name": "${post.movie.director}"
+    },
+    "image": "${post.featuredImageMedium.node.sourceUrl}",
+    "dateCreated": "${post.date}+07:00",
+    "aggregateRating": {
+        "@type": "AggregateRating",
+        "bestRating": "10",
+        "ratingCount": "1",
+        "ratingValue": "${post.movie.rating ? post.movie.rating : randomRatingCount}",
+        "reviewCount": "1"
+    },
+    "trailer": {
+        "@type": "VideoObject",
+        "name": "ตัวอย่างหนัง ${post.title}",
+        "description": "ตัวอย่างหนัง ${post.title} HD",
+        "thumbnailUrl": "${post.featuredImageMedium.node.sourceUrl}",
+        "uploadDate": "${post.date}+07:00",
+        "contentUrl": "https://youtu.be/${post.movie.youtubeId}",
+        "embedUrl": "https://www.youtube.com/embed/${post.movie.youtubeId}"
+    }
+}`;
 
 
-    let raw : any = JSON.parse(post.seo.schema.raw);
-    // raw['@graph'][0]['@type'] = 'Article'; // เปลี่ยนประเภทเป็น Article
-    raw['@graph'].splice(0, 1); // ลบประเภท Article เพื่อใส่ ประเภท Movie
-    const structuredData_json : any = JSON.parse(structuredData);
-    raw['@graph'].push(structuredData_json);
+let raw : any = JSON.parse(post.seo.schema.raw);
+const structuredData_json : any = JSON.parse(structuredData);
+raw['@graph'].push(structuredData_json);
 
-    post.seo.schema.raw = JSON.stringify(raw);
+post.seo.schema.raw = JSON.stringify(raw);
 
-    post.seo.metaDesc = `ดูหนัง ${post.title} กำกับโดย ${post.movie.director} จะเข้าฉายวันที่ ${formatDateToThai(post.movie.releaseDate)} เตรียมดูหนังเต็มเรื่อง`;
+post.seo.metaDesc = `ดูหนัง ${post.title} กำกับโดย ${post.movie.director} จะเข้าฉายวันที่ ${formatDateToThai(post.movie.releaseDate)} เตรียมดูหนังเต็มเรื่อง`;
 
-    // console.log(post.seo.schema.raw);
+post.seo.title = `${post.title} : ดูหนัง เต็มเรื่อง เรื่องย่อ ตัวอย่าง`;
 
-} else {
-    postTitle = post.title;    
-}
-
+const postID = (post as any).guid.split('?p=')[1];
 
 ---
-<Layout title={postTitle} seo={post.seo}>
-    <div>
-        <p>{postTitle}</p>
-    </div>
+<Layout seo={post.seo} type="movie">
+    <MoiveTemplate post={post} prev={prev} next={next} relatedPosts={relatedPosts} />
+    <RelatedPosts relatedPosts={relatedPosts} />
 </Layout>
