--- a/src/pages/privacy-policy.astro
+++ b/src/pages/privacy-policy.astro
@@ -55,7 +55,7 @@ const structuredData : any = `
 }
 `;
 ---
-<Layout>
+<Layout seo={data.page.seo} type="page">
     <Page>
         <div class="page">
             <h1 class="page-title">{data.page.title}</h1>
