--- a/src/styles/archive.scss
+++ b/src/styles/archive.scss
@@ -7,10 +7,13 @@
 // =================================================== ARCHIVE ===================================================
 // ==============================================================================================================
 .header-section {
-    @apply mb-5;
+    @apply mt-10 mb-10 space-y-3;
+    p {
+        @apply text-neutral-300 text-base md:text-lg leading-7
+    }
 }
 .section-title {
-    @apply text-2xl font-bold md:text-3xl text-white;
+    @apply text-2xl md:text-4xl font-bold text-white;
 }
 .list-posts {
     @apply grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5;
@@ -22,7 +25,7 @@
     @apply grid grid-cols-1 md:grid-cols-3 gap-5;
 }
 .list-related {
-    @apply grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-5;
+    @apply grid grid-cols-2 md:grid-cols-4 gap-5;
 }
 
 .trailer-thumbnail {
@@ -78,13 +81,13 @@
 }
 
 .related-posts {
-    @apply mt-10 pt-5 mb-5 border-t border-neutral-600;
+    @apply mt-10 pt-5 mb-5 border-t border-neutral-600 max-w-screen-md mx-auto;
     .section-title {
         @apply text-xl font-bold md:text-2xl text-white mb-2 text-center;
     }
 
     img {
-        @apply hidden md:block;
+        // @apply hidden md:block;
     }
 }
 
