--- a/src/styles/movie.scss
+++ b/src/styles/movie.scss
@@ -2,15 +2,33 @@
 @tailwind components;
 @tailwind utilities;
 
+.tabs {
+    @apply max-w-screen-sm mx-auto;
+}
+.tabs-nav {
+    @apply grid grid-cols-3 my-3 rounded-lg shadow-md overflow-hidden;
+    .active {
+        @apply bg-gradient-to-br from-primary/90 to-primary/50 text-white hover:bg-gradient-to-br hover:from-primary/90 hover:to-primary/50 hover:text-white;
+    }
+}
+.tabs-nav-item {
+    @apply bg-zinc-800/50 p-1 hover:bg-zinc-800/20 transition-all duration-0;
+}
+.tabs-content {
+    @apply transition-all duration-300;
+    @apply opacity-0 translate-y-0 h-0 overflow-hidden;
+    @apply data-[show=true]:translate-y-0 data-[show=true]:opacity-100 data-[show=true]:h-fit;
+}
+
 .movie-detail-container {
-    
-    @apply flex flex-wrap justify-center items-center gap-5 md:gap-5 md:gap-y-5 max-w-3xl -mx-3 md:mx-auto p-3 md:p-4 pt-6 md:pt-4 bg-neutral-800/50 rounded-lg shadow-md shadow-neutral-950/80;
+    @apply md:mt-14;
+    @apply flex flex-wrap justify-center gap-5 md:gap-5 md:gap-y-5 max-w-3xl -mx-1 md:mx-auto p-3 md:p-4 pt-6 md:pt-4 md:bg-neutral-800/50 rounded-lg md:shadow-md md:shadow-neutral-950/80 relative;
     @apply max-w-screen-sm;
 }
 .movie-poster {
-    @apply w-full md:w-[23%];
+    @apply w-full md:w-[23%] md:-top-[2rem] md:-mb-[2rem] md:order-1 relative transition-all duration-300;
     img {
-        @apply block max-w-[220px] w-full mx-auto;
+        @apply block max-w-[220px] w-full mx-auto border border-neutral-400/30 rounded-lg;
     }
 }
 .movie-detail {
@@ -53,9 +71,40 @@
     }
 }
 
+.trailer-container {
+    @apply border border-neutral-900 bg-neutral-800/50 shadow rounded p-5;
+}
+
 .trailer {
-    @apply max-w-screen-sm mx-auto mb-10;
+    @apply max-w-screen-sm mx-auto;
     .title {
         @apply mb-3 text-xl font-medium text-center text-primary;
     }
+}
+
+.imdb-box {
+    @apply border border-neutral-900 bg-neutral-800/50 shadow rounded p-5;
+}
+
+
+.imdb-rating {
+    @apply mt-3 rounded-3xl border border-zinc-700 bg-zinc-800/60 shadow px-8 py-0.5 inline-flex gap-3 items-center;
+    .rating-score {
+        @apply text-zinc-100 font-bold text-lg;
+    }
+    .rating-votes {
+        @apply text-zinc-200 text-sm;
+    }
+}
+.imdb-subtitle {
+    @apply text-primary font-semibold text-lg md:text-xl md:leading-tight mt-10 mb-3;
+}
+.imdb-avatar {
+    @apply aspect-square rounded-full w-full h-auto object-cover;
+}
+.imdb-name {
+    @apply text-sm block text-center line-clamp-2 my-1 text-zinc-200;
+}
+.imdb-characters {
+    @apply text-[0.75rem] font-light block text-center line-clamp-2 text-zinc-300;
 }
