--- a/src/components/AdsenseMovie.astro
+++ b/src/components/AdsenseMovie.astro
@@ -2,7 +2,7 @@
 ---
 <div class="ads">
     <div class="inner">
-        <script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
+        <script type="text/partytown" async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
         <div id="gpt-passback">
         <script>
             // @ts-ignore
