--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -12,10 +12,10 @@ import '../styles/footer.scss';
                 <a href="/">ดูหนัง</a>
             </li>
             <li>
-                <a href="/about">เกี่ยวกับเรา</a>
+                <a href="https://onlygroub.com/about">เกี่ยวกับเรา</a>
             </li>
             <li>
-                <a href="/privacy-policy">นโยบายความเป็นส่วนตัว</a>
+                <a href="https://onlygroub.com/privacy-policy">นโยบายความเป็นส่วนตัว</a>
             </li>
         </ul>
         <!-- End Col -->
