--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -30,7 +30,7 @@ import '../styles/navbar.scss';
                 <li><a href="/category/thai">ดูหนังไทย</a></li>
                 <li><a href="/category/inter">ดูหนังสากล</a></li>
                 <li><a href="https://onlygroub.com" target="_blank">ข่าวหนัง</a></li>
-                <li><a href="/contact">ติดต่อเรา</a></li>
+                <li><a href="https://onlygroub.com/contact">ติดต่อเรา</a></li>
             </ul>
         </div>
     </nav>
