--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,4 +15,9 @@ import '../styles/archive.scss';
         <p>เราเป็นคนหนึ่งที่ชื่นชอบการ<strong>ดูหนัง</strong>เป็นชีวิตจิตใจ เราเลยสร้างเว็บไซต์ <strong>"Onlygroup"</strong> ขึ้นมาเพื่อเป็นแหล่งรวมข้อมูลและข่าวสารเกี่ยวกับภาพยนตร์ ทั้งไทยและต่างประเทศ เอาไว้ให้ทุกคนได้ติดตามกันแบบอัพเดท ไม่ว่าจะเป็นเรื่องย่อ <em>ตัวอย่างหนัง</em> รีวิว หรือบทความน่าสนใจ รับรองว่าถูกใจคอหนังแน่นอน!</p>
     </div>
     <HomeLastPost />
+    <div class="mt-5">
+        <p class="text-center">
+            <strong>Onlygroub</strong> เว็บไซต์ที่รวบรวมข้อมูลภาพยนตร์คุณภาพทั้งไทยและต่างประเทศ พร้อมอัพเดทข้อมูลใหม่ล่าสุดทุกวัน ที่นี่คุณจะได้เพลิดเพลินไปกับคลังข้อมูลภาพยนตร์ที่ครบครัน ทั้งข่าวสารวงการหนัง บทวิจารณ์เชิงลึก และรีวิวคุณภาพจากทีมงานมืออาชีพที่พร้อมแนะนำหนังดีๆ ให้คุณได้เลือกชม เราคัดสรรทุกข้อมูลมาเพื่อให้คุณได้เข้าถึงและเข้าใจภาพยนตร์แต่ละเรื่องได้อย่างลึกซึ้ง ไม่พลาดทุกรายละเอียดสำคัญที่จะทำให้ประสบการณ์การ<strong>ดูหนัง</strong>ของคุณสมบูรณ์แบบยิ่งขึ้น
+        </p>
+    </div>
 </Layout>
