--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -55,7 +55,7 @@ import HeadPage from '../seo/Page.astro';
 				},
 			]}
 		/>
-
+		<meta name="google-site-verification" content="dMOF9bZ1JXnnjFS33JWitP9tMeeavXAvQMdVE-pWNEQ" />
 		<!-- Google tag (gtag.js) -->
 		<script type="text/partytown" async src="https://www.googletagmanager.com/gtag/js?id=G-GBWYWF9KWG"></script>
 		<script type="text/partytown">
