--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -38,7 +38,7 @@ import Footer from '../components/Footer.astro';
                 <p class="mt-3  text-neutral-400">Oops, something went wrong.</p>
                 <p class=" text-neutral-400">ขออภัยไม่พบหน้าเพจที่คุณต้องการ</p>
                 <div class="mt-5 flex flex-col justify-center items-center gap-2 sm:flex-row sm:gap-3">
-                    <a class="w-full sm:w-auto py-3 px-4 inline-flex justify-center items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-blue-600 text-white hover:bg-blue-700 focus:outline-none focus:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none" href="https://onlygroub.com">
+                    <a class="w-full sm:w-auto py-3 px-4 inline-flex justify-center items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-blue-600 text-white hover:bg-blue-700 focus:outline-none focus:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none" href="https://movie.onlygroub.com">
                         <svg class="shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m15 18-6-6 6-6"/></svg>
                         กลับสู่หน้าแรก
                     </a>
